# VirtualPhoenixEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ClassDiagram.puml  README.md  compileDebug.sh  compileRelease.sh  compileShaders.sh  launch.sh  recompileAndLaunch.sh
include/: CMakeLists.txt  tiny_obj_loader.h
src/: HelloTriangle.cpp  HelloTriangle.hpp  ObjLoader.hpp  VPCallbacks.hpp  VPCamera.hpp  VPCommandBufferManager.cpp  VPImage.cpp  VPImage.hpp  VPLight.hpp  VPMaterial.hpp  VPMath.hpp  VPMemoryBufferManager.cpp  VPMemoryBufferManager.hpp  VPMesh.hpp  VPRenderer.cpp  VPRenderer.hpp  VPResourcesLoader.cpp  VPResourcesLoader.hpp  VPScene.cpp  VPScene.hpp  VPStdRenderPipeline.cpp  VPStdRenderPipeline.hpp  VPStdRenderPipelineManager.cpp  VPStdRenderPipelineManager.hpp  VPStdRenderableObject.hpp  VPTransform.hpp  VPUserInputController.hpp  VPVertex.hpp  main.cpp
src/Managers/: BaseRenderManager.hpp  CommandBuffersManager.cpp  CommandBuffersManager.hpp  DevicesManager.cpp  DevicesManager.hpp  PipelineManager.cpp  PipelineManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp  TrafficCop.cpp  TrafficCop.hpp  VPCommandBufferManager.cpp  VPCommandBufferManager.hpp  VPDeviceManagement.cpp  VPDeviceManagement.hpp  VPMemoryBufferManager.cpp  VPMemoryBufferManager.hpp  VPStdRenderPipelineManager.cpp  VPStdRenderPipelineManager.hpp  VertexBuffersManager.cpp  VertexBuffersManager.hpp  VulkanInstanceManager.cpp  VulkanInstanceManager.hpp
src/Shaders/: BlinnPhong.frag  BlinnPhong.vert  HelloTriangle.frag  HelloTriangle.vert  frag.spv  vert.spv
